# mbc_mom

./: .gitignore  Cargo.toml  DEVELOP_2.md  README.md  mbc_lib.pyi  pixi.toml  pyproject.toml
.github/workflows/: CI.yml
dev_notes/: DEVELOP_1.md  DEVELOP_3.md  DEVELOP_4.md  DEVELOP_5.md  DOC_seed_prompt.md
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/api/: geometry.rst  solvers.rst
docs/source/theory/: ground_models.rst  method_of_moments.rst  scattering.rst
examples/: balun.py  quickstart.py
mbc/: __init__.py  __main__.py
mbc_mom/: __init__.py  mbc_lib.pyi
mbc_mom-stubs/: __init__.pyi  geometry.pyi
src/: constants.rs  expj.rs  farfield.rs  geometry.rs  impedance.rs  incident.rs  lib.rs  nearfield.rs  sommerfeld.rs
tests/: test_frill.py  test_geom.py  test_impedance.py  test_loop.py  test_monopole.py  test_plot_gnd_pattern.py  test_plot_nearfield.py  test_plot_pattern.py  test_receiving.py  test_rust_interface.py  test_solve_loop.py  test_sommerfeld.py  test_stub.py  test_two_wire_stub.py
utils/: plot_current.py
