[package]
name = "mbc-mom"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mbc_mom"
crate-type = ["cdylib"]

[dependencies]
num-complex = "0.4.6"
pyo3 = { version = "0.29.0", features = ["num-complex"] }
rayon = "1.12"